frontend attachment support, api fixes, css for new features
